Sprint 1, trinagle z-index fixed, list mixes for table added

--- a/styles/style.css
+++ b/styles/style.css
@@ -50,10 +50,6 @@
   justify-content: space-between;
   align-content: space-between;
   width: 1100px;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  list-style-type: none;
 }
 
 .table__heading {
@@ -277,6 +273,7 @@
 
 .kaufman {
   position: relative;
+  z-index: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -290,7 +287,7 @@
   position: absolute;
   right: 0;
   top: 0;
-  z-index: 0;
+  z-index: -1;
   background-image: url(../images/kaufman-triangle.svg);
   background-repeat: no-repeat;
   background-position: top right -210px;
